Add an animated transition link, cus fun

--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "gatsby-plugin-remote-images": "^1.0.1",
     "gatsby-plugin-sharp": "^2.0.14",
     "gatsby-plugin-styled-components": "^3.0.4",
+    "gatsby-plugin-transition-link": "^1.4.7",
     "gatsby-source-filesystem": "^2.0.8",
     "gatsby-transformer-json": "^2.1.7",
     "gatsby-transformer-sharp": "^2.1.8",
+    "gsap": "^2.0.2",
     "prop-types": "^15.6.2",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
