--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "gatsby-transformer-json": "^2.1.7",
     "gatsby-transformer-sharp": "^2.1.8",
     "gsap": "^2.0.2",
+    "node-vibrant": "^3.1.1",
     "prop-types": "^15.6.2",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
